# StructX

./: .gitignore  Cargo.toml  README.md
crates/deepbook-client/: Cargo.toml
crates/deepbook-client/src/: abi.rs  client.rs  constants.rs  error.rs  lib.rs  market.rs  models.rs  object_ref.rs  rpc.rs
crates/structx-api/: Cargo.toml
crates/structx-api/src/: intent_audit.rs  intent_positions.rs  main.rs  open_execution_audit.rs  position_ledger.rs  proposal_store.rs  storage.rs
crates/structx-cli/: Cargo.toml
crates/structx-cli/src/: lib.rs  main.rs
crates/structx-core/: Cargo.toml
crates/structx-core/src/: advanced_strategies.rs  breakout_optimizer.rs  lib.rs  payoff.rs  price.rs  quote_guard.rs  quote_plan.rs  quote_preview.rs  quote_tx.rs  selector.rs  strike_grid.rs
crates/structx-service/: Cargo.toml
crates/structx-service/src/: intent.rs  intent_proposal.rs  intent_quote_service.rs  intent_service.rs  lib.rs  market_catalog.rs  market_refersh.rs  market_refresh.rs  market_store.rs
frontend/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/app/: _landing-experience.tsx  _landing-shared.tsx  layout.tsx  page.tsx  providers.tsx
frontend/src/app/app/: page.tsx
frontend/src/app/markets/: page.tsx
frontend/src/app/positions/: page.tsx
frontend/src/app/strategies/: StrategiesView.tsx  page.tsx
frontend/src/app/strategies/[id]/: page.tsx
frontend/src/components/: AuditResult.tsx  BreakoutForm.tsx  DebugDetails.tsx  ErrorNotice.tsx  ExecutionPanel.tsx  Header.tsx  LegsTable.tsx  PayoffTable.tsx  PreviewSummary.tsx  Skeleton.tsx  StatusStepper.tsx  StrategyCards.tsx  WarningsPanel.tsx
frontend/src/components/audit/: AuditReceipt.tsx
frontend/src/components/common/: CopyButton.tsx  EmptyState.tsx  Skeleton.tsx  StatusPill.tsx  Toast.tsx
frontend/src/components/execution/: ExecutionPanel.tsx  ExecutionStepper.tsx  PreflightChecklist.tsx
frontend/src/components/guided/: NormalModeView.tsx
frontend/src/components/intent/: NormalModeIntentPanel.tsx
frontend/src/components/landing/: HeaderConnect.tsx  NewModeToggle.tsx  NormalModePanel.tsx  StrategyWorkbench.tsx  WalletAvatar.tsx  WorkbenchPreviewSkeleton.tsx
frontend/src/components/layout/: CategoryNav.tsx  DeepBookPredictAttribution.tsx  Header.tsx
frontend/src/components/mode/: ModeToggle.tsx
frontend/src/components/portfolio/: PortfolioDashboard.tsx
frontend/src/components/preview/: LegsTable.tsx  PayoffTable.tsx  PayoffVisualization.tsx  PreviewSummary.tsx  SmartSelectorPanel.tsx
frontend/src/components/strategy/: StrategyBuilder.tsx  StrategyCard.tsx  StrategyGrid.tsx  StyleSegmentedControl.tsx
frontend/src/components/ui/: Button.tsx  Select.tsx  Skeleton.tsx
frontend/src/lib/: api.ts  cache.ts  errors.ts  format.ts  portfolioHistory.ts  positionsChain.ts  strategyCatalog.ts  tx.ts
frontend/src/types/: structx.ts
