[workspace]
members = [
    "crates/deepbook-client",
    "crates/structx-core",
    "crates/structx-cli", "crates/structx-api",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/WhiteFlash14/StructX"

[workspace.dependencies]
sui-transaction-builder = { version = "0.3.1", default-features = false }
sui-sdk-types = { version = "0.3.1", features = ["serde"] }
bcs = "0.1.6"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
