[package]
name = "structx-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.8"
deepbook-client = { path = "../deepbook-client" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
structx-core = { path = "../structx-core" }
structx-service = { path = "../structx-service" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3"
