[package]
name = "structx-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde_json.workspace = true
chrono.workspace = true
clap.workspace = true
comfy-table.workspace = true
deepbook-client = { path = "../deepbook-client" }
structx-core = { path = "../structx-core" }
tokio.workspace = true
sui-sdk-types.workspace = true
