[package]
name = "structx-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
bcs.workspace = true
sui-sdk-types.workspace = true
sui-transaction-builder.workspace = true
chrono.workspace = true
deepbook-client = { path = "../deepbook-client" }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
